--- a/user-microservice/pom.xml
+++ b/user-microservice/pom.xml
@@ -91,5 +91,21 @@
         </dependency>
         
     </dependencies>
-    
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>6.1.6</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>6.1.6</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
 </project>
